--- a/asannomre.html
+++ b/asannomre.html
@@ -51,19 +51,6 @@
 				</div>
 				<div class="col-lg-8 my-sm-3">
 					<div class="row d-flex align-items-center justify-content-between">
-						<div class="col-md-1 col-xs-12 d-flex justify-content-between">
-							<div class="btn-group my-4">
-								<a type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-									aria-expanded="false" style="color: rgb(58, 58, 58);">
-									<span class="custom-icon custom-icon-flag-az"></span>
-								</a>
-								<div class="dropdown-menu">
-									<a class="dropdown-item" href="#">Az</a>
-									<a class="dropdown-item" href="#">Rus</a>
-									<a class="dropdown-item" href="#">Eng</a>
-								</div>
-							</div>
-						</div>
 
 						<div class="col-md-5">
 							<div class="row">
@@ -84,7 +71,8 @@
 											<div class="modal-dialog" role="document">
 												<div class="modal-content">
 													<div class="modal-header justify-content-center py-3">
-														<div class="modal-title text-center" id="exampleModalLabelLogin">
+														<div class="modal-title text-center"
+															id="exampleModalLabelLogin">
 															<h5>www.nomre.net'a Daxil olun</h5>
 															<p class="m-0">Ən yaxşı nömrələri ən uyğun qiymətlərə tapın!
 															</p>
@@ -140,7 +128,7 @@
 													</div>
 													<div class="modal-footer justify-content-center">
 														<a href="#" class="text-decoration-none fs-md-14 text-primary"
-															data-target="#register_page"  data-toggle="modal">Saytda
+															data-target="#register_page" data-toggle="modal">Saytda
 															hesabınız yoxdursa, qeydiyyatdan
 															keçin</a>
 													</div>
@@ -153,23 +141,59 @@
 								<div class="col-6 d-flex justify-content-end ">
 									<ul
 										class="nav  d-lg-flex justify-content-between align-items-center navbar-top-links navbar-right">
-										
+
 										<li class="list-unstyled justify-content-center">
 											<a href="#"
 												class="text-decoration-none  d-flex align-items-center  py-2 px-3"
 												style="border: 1px solid #22BEA5;" data-toggle="modal"
-												data-target=".exampleModalsignup">
+												data-target=".exampleModalChoose">
 												<span class="fs-lg-14 text-dark ">Qeydiyyat</span>
 											</a>
 										</li>
-
-										<div class="modal shadow rounded fade exampleModalsignup signupbtn my-5 z-high in"
+										<div class="modal shadow rounded fade exampleModalChoose  my-5 z-high in"
 											id="register_page" tabindex="-1" role="dialog"
 											aria-labelledby="exampleModalLabelSignup" aria-hidden="false">
 											<div class="modal-dialog" role="document">
 												<div class="modal-content">
 													<div class="modal-header justify-content-center fs-md-14">
-														<div class="modal-title text-center" id="exampleModalLabelSignup">
+														<div class="modal-title text-center"
+															id="exampleModalLabelSignup">
+															<p class="m-0 py-2">
+																Saytda qeydiyyatdan keçdikdən sonra satdığınız və ya
+																almaq istədiyiniz nömrənin elanını verə bilərsiz.
+															</p>
+														</div>
+
+													</div>
+													<div class="modal-body p-3">
+														<div class="row my-5">
+															<div class="col-6">
+																<a type="submit"
+																	class="btn btn-outline bg-purple text-white  w-100 shadow "
+																	data-target=".dillerModal"  data-toggle="modal">Dillerlər</a>
+															</div>
+															<div class="col-6">
+																<a type="submit"
+																	class="btn btn-outline bg-purple text-white  w-100 shadow "
+																	data-target=".dillerOlmayanModal" data-toggle="modal">Diller Olmayan</a>
+															</div>
+														</div>
+													</div>
+													<div class="modal-footer justify-content-center">
+														<a href="#" id="tikla"
+															class="text-decoration-none text-primary"
+															data-target="#login_page" data-toggle="modal">Saytda
+															qeydiyyasınız varsa,daxil olun</a>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="modal shadow rounded fade dillerModal  my-5 z-high in"
+										id="register_page"	tabindex="-1" role="dialog" aria-hidden="false">
+											<div class="modal-dialog" role="document">
+												<div class="modal-content">
+													<div class="modal-header justify-content-center fs-md-14">
+														<div class="modal-title text-center">
 															<p class="m-0">Saytda qeydiyyatdan keçdikdən sonra
 																satdığınız və ya
 																almaq
@@ -181,8 +205,103 @@
 													<div class="modal-body p-3">
 														<div class="row d-flex justify-content-center">
 															<div class="col-10 text-center">
-																<form action="" id="requestacallformSignup" method="POST"
-																	class="needs-validation" novalidate
+																<form action="" id="requestacallformSignup"
+																	method="POST" class="needs-validation" novalidate
+																	name="requesttacallform">
+																	<div class="row">
+																		<div class="col-6">
+																			<div class="form-group">
+																				<div class="input-group">
+																					<input type="text"
+																						class="form-control"
+																						placeholder="Ad" name="text">
+																				</div>
+																			</div>
+																		</div>
+																		<div class="col-6">
+																			<div class="form-group">
+																				<div class="input-group">
+																					<input type="text"
+																						class="form-control"
+																						placeholder="Soyad" name="text">
+																				</div>
+																			</div>
+																		</div>
+																	</div>
+																	<div class="form-group">
+																		<div class="input-group">
+																			<input type="email" class="form-control"
+																				placeholder="Email" name="email"
+																				onchange="validateEmailAdd();">
+																		</div>
+																	</div>
+
+																	<div class="form-group">
+																		<div class="input-group">
+																			<input type="number" class="form-control"
+																				placeholder="Əlaqə nömrəsi daxil edin"
+																				name="number">
+																		</div>
+																	</div>
+																	<div class="form-group">
+																		<div class="input-group">
+																			<input type="text" class="form-control"
+																				placeholder="Ünvan"
+																				name="text">
+																		</div>
+																	</div>
+																	<div class="form-group">
+																		<div class="input-group">
+																			<input type="password" class="form-control"
+																				placeholder="Şifrə" name="password"
+																				onchange="validatePasswordAdd();">
+																		</div>
+																	</div>
+																	<div class="form-group">
+																		<div class="input-group">
+																			<input type="password" class="form-control"
+																				placeholder="Şifrəni təkrar yazın"
+																				name="password">
+																		</div>
+																	</div>
+																</form>
+
+																<button type="submit"
+																	class="btn btn-outline submit-btn w-100 shadow btn-one"
+																	data-style="zoom-out">Qeydiyyat</button>
+															</div>
+														</div>
+
+													</div>
+													<div class="modal-footer justify-content-center">
+														<a href="#" id="tikla"
+															class="text-decoration-none text-primary"
+															data-target="#login_page" data-toggle="modal">Saytda
+															qeydiyyasınız varsa,daxil olun</a>
+													</div>
+
+												</div>
+											</div>
+										</div>
+										<div class="modal shadow rounded fade dillerOlmayanModal  my-5 z-high in"
+										id="register_page"	tabindex="-1" role="dialog" aria-hidden="false">
+											<div class="modal-dialog" role="document">
+												<div class="modal-content">
+													<div class="modal-header justify-content-center fs-md-14">
+														<div class="modal-title text-center">
+															<p class="m-0">Saytda qeydiyyatdan keçdikdən sonra
+																satdığınız və ya
+																almaq
+																istədiyiniz nömrənin elanını verə bilərsiz.
+															</p>
+														</div>
+
+													</div>
+													<div class="modal-body p-3">
+														<div class="row d-flex justify-content-center">
+															<div class="col-10 text-center">
+																<form action="" id="requestacallformSignup"
+																	method="POST" class="needs-validation" novalidate
 																	name="requesttacallform">
 																	<div class="row">
 																		<div class="col-6">
@@ -243,7 +362,8 @@
 
 													</div>
 													<div class="modal-footer justify-content-center">
-														<a href="#" id="signupbtn" class="text-decoration-none text-primary"
+														<a href="#" id="tikla"
+															class="text-decoration-none text-primary"
 															data-target="#login_page" data-toggle="modal">Saytda
 															qeydiyyasınız varsa,daxil olun</a>
 													</div>
@@ -260,7 +380,7 @@
 								class="nav  d-lg-flex justify-content-between align-items-center navbar-top-links navbar-right">
 								<li>
 									<a href="./" class="text-decoration-none" data-toggle="modal"
-										data-target=".exampleModalsignup">
+										data-target=".exampleModallogin">
 
 										<button class="add-btn add-btn-1 d-flex align-items-center  ">
 											<i class="fas fa-plus text-white mr-2" style="font-size: 8px; "></i>
@@ -283,7 +403,6 @@
 			</div>
 		</div>
 	</header>
-
 	<div id="mobile_menu" class="bg-purple z-100 position-absolute left-100 w-100 t-5 h-100 top-0 pt-100">
 		<ul class="m-5 list-unstyled">
 			<li class="mt-5 mb-4 ">
