--- a/changepassword.html
+++ b/changepassword.html
@@ -164,9 +164,9 @@
 					<li class="position-relative w-100"><a href="./published.html" class="text-dark d-block">Dərc olunmuş</a></li>
 					<li class="position-relative w-100"><a href="./checking.html" class="text-dark d-block">Yoxlanılır</a></li>
 					<li class="position-relative w-100"><a href="./payment.html" class="text-dark d-block">Ödəniş et</a></li>
-					<li class="position-relative w-100"><a href="" class="text-dark d-block">Dərc olunmamış</a></li>
+					<li class="position-relative w-100"><a href="./unpublished.html" class="text-dark d-block">Dərc olunmamış</a></li>
 					<li class="position-relative w-100"><a href="" class="text-dark d-block">Deaktiv olunmuş</a></li>
-					<li class="position-relative w-100"><a href="" class="text-dark d-block">Sifarişlər</a></li>
+					<li class="position-relative w-100"><a href="./orders-profile.html" class="text-dark d-block">Sifarişlər</a></li>
 				</ul>
 			</div>
 			<div class="my-4 col-md-9 col-xs-12">
