--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 																				class="form-check-input filled-in"
 																				id="new">
 																			<label
-																				class=" form-check-label small card-link-secondary"
+																				class=" form-check-label small card card-animate-link-secondary"
 																				for="new">Məni xatirla</label>
 																		</div>
 
@@ -752,7 +752,7 @@
 			<div class="my-5 mobile-view">
 				<div class="row">
 					<div class="col-sm-6 mb-4 ">
-						<div class=" card text-center">
+						<div class=" card card-animate text-center">
 							<div class="col-md-12 py-3 justify-content-center align-items-center d-flex">
 								<span class="mr-3 font-weight-bold">Azercell 50 2105540</span>
 								<i class="material-icons">
@@ -789,7 +789,7 @@
 
 					</div>
 					<div class="col-sm-6 mb-4 ">
-						<div class=" card text-center">
+						<div class=" card card-animate text-center">
 							<div class="col-md-12 py-3 justify-content-center align-items-center d-flex">
 								<span class="mr-3  font-weight-bold">Azercell 50 2105540</span>
 								<i class="material-icons">
@@ -826,7 +826,7 @@
 						</div>
 					</div>
 					<div class="col-sm-6 mb-4 ">
-						<div class=" card text-center">
+						<div class=" card card-animate text-center">
 							<div class="col-md-12 py-3 justify-content-center align-items-center d-flex">
 								<span class="mr-3  font-weight-bold">Azercell 50 2105540</span>
 								<i class="material-icons">
@@ -864,7 +864,7 @@
 
 					</div>
 					<div class="col-sm-6 mb-4 ">
-						<div class=" card text-center">
+						<div class=" card card-animate text-center">
 							<div class="col-md-12 py-3 justify-content-center align-items-center d-flex">
 								<span class="mr-3  font-weight-bold">Azercell 50 2105540</span>
 								<i class="material-icons">
@@ -902,7 +902,7 @@
 
 					</div>
 					<div class="col-sm-6 mb-4 ">
-						<div class=" card text-center">
+						<div class=" card card-animate text-center">
 							<div class="col-md-12 py-3 justify-content-center align-items-center d-flex">
 								<span class="mr-3  font-weight-bold">Azercell 50 2105540</span>
 								<i class="material-icons">
@@ -940,7 +940,7 @@
 
 					</div>
 					<div class="col-sm-6 mb-4 ">
-						<div class=" card text-center">
+						<div class=" card card-animate text-center">
 							<div class="col-md-12 py-3 justify-content-center align-items-center d-flex">
 								<span class="mr-3  font-weight-bold">Azercell 50 2105540</span>
 								<i class="material-icons">
@@ -978,7 +978,7 @@
 
 					</div>
 					<div class="col-sm-6 mb-4 ">
-						<div class=" card text-center">
+						<div class=" card card-animate text-center">
 							<div class="col-md-12 py-3 justify-content-center align-items-center d-flex">
 								<span class="mr-3  font-weight-bold">Azercell 50 2105540</span>
 								<i class="material-icons">
@@ -1016,7 +1016,7 @@
 
 					</div>
 					<div class="col-sm-6 mb-4 ">
-						<div class=" card text-center">
+						<div class=" card card-animate text-center">
 							<div class="col-md-12 py-3 justify-content-center align-items-center d-flex">
 								<span class="mr-3  font-weight-bold">Azercell 50 2105540</span>
 								<i class="material-icons">
@@ -1054,7 +1054,7 @@
 
 					</div>
 					<div class="col-sm-6 mb-4 ">
-						<div class=" card text-center">
+						<div class=" card card-animate text-center">
 							<div class="col-md-12 py-3 justify-content-center align-items-center d-flex">
 								<span class="mr-3  font-weight-bold">Azercell 50 2105540</span>
 								<i class="material-icons">
@@ -1092,7 +1092,7 @@
 
 					</div>
 					<div class="col-sm-6 mb-4">
-						<div class=" card text-center">
+						<div class=" card card-animate text-center">
 							<div class="col-md-12 py-3 justify-content-center align-items-center d-flex">
 								<span class="mr-3  font-weight-bold">Azercell 50 2105540</span>
 								<i class="material-icons">
@@ -1130,7 +1130,7 @@
 
 					</div>
 					<div class="col-sm-6 mb-4 ">
-						<div class=" card text-center">
+						<div class=" card card-animate text-center">
 							<div class="col-md-12 py-3 justify-content-center align-items-center d-flex">
 								<span class="mr-3  font-weight-bold">Azercell 50 2105540</span>
 								<i class="material-icons">
@@ -1168,7 +1168,7 @@
 
 					</div>
 					<div class="col-sm-6 mb-4 ">
-						<div class=" card text-center">
+						<div class=" card card-animate text-center">
 							<div class="col-md-12 py-3 justify-content-center align-items-center d-flex">
 								<span class="mr-3  font-weight-bold">Azercell 50 2105540</span>
 								<i class="material-icons">
@@ -1206,7 +1206,7 @@
 
 					</div>
 					<div class="col-sm-6 mb-4 ">
-						<div class=" card text-center">
+						<div class=" card card-animate text-center">
 							<div class="col-md-12 py-3 justify-content-center align-items-center d-flex">
 								<span class="mr-3  font-weight-bold">Azercell 50 2105540</span>
 								<i class="material-icons">
@@ -1244,7 +1244,7 @@
 
 					</div>
 					<div class="col-sm-6 mb-4 ">
-						<div class=" card text-center">
+						<div class=" card card-animate text-center">
 							<div class="col-md-12 py-3 justify-content-center align-items-center d-flex">
 								<span class="mr-3  font-weight-bold">Azercell 50 2105540</span>
 								<i class="material-icons">
@@ -1282,7 +1282,7 @@
 
 					</div>
 					<div class="col-sm-6 mb-4">
-						<div class=" card text-center">
+						<div class=" card card-animate text-center">
 							<div class="col-md-12 py-3 justify-content-center align-items-center d-flex">
 								<span class="mr-3  font-weight-bold">Azercell 50 2105540</span>
 								<i class="material-icons">
@@ -1320,7 +1320,7 @@
 
 					</div>
 					<div class="col-sm-6 mb-4 ">
-						<div class=" card text-center">
+						<div class=" card card-animate text-center">
 							<div class="col-md-12 py-3 justify-content-center align-items-center d-flex">
 								<span class="mr-3  font-weight-bold">Azercell 50 2105540</span>
 								<i class="material-icons">
