--- a/profile.html
+++ b/profile.html
@@ -71,7 +71,7 @@
 									</a>
 									
 									<div class="dropdown-menu dropdown-menu-right">
-										<a href="#" class="dropdown-item">Profil</a>
+										<a href="./profile.html" class="dropdown-item">Profil</a>
 										<a href="#" class="dropdown-item">Çıxış</a>
 									</div>
 								</li>
@@ -155,8 +155,8 @@
 	<main class=" h-100 container">
 		<div class="row mt-5" style="margin-bottom: 200px;">
 			<div class=" my-4 col-md-3 col-xs-12">
-				<ul class="sidebar-navigation p-0 m-0 list-unstyled position-relative">
-					<li class="position-relative w-100"><a href="./profile.html" class="text-dark d-block">Profil</a>
+				<ul class="sidebar-navigation  p-0 m-0 list-unstyled position-relative">
+					<li class="position-relative w-100 "><a href="./profile.html" class="text-dark d-block">Profil</a>
 					</li>
 					<li class="position-relative w-100"><a href="./changepassword.html"
 							class="text-dark d-block">Şifrəni dəyişdir</a></li>
@@ -172,9 +172,9 @@
 							class="text-dark d-block">Yoxlanılır</a></li>
 					<li class="position-relative w-100"><a href="./payment.html" class="text-dark d-block">Ödəniş et</a>
 					</li>
-					<li class="position-relative w-100"><a href="" class="text-dark d-block">Dərc olunmamış</a></li>
+					<li class="position-relative w-100"><a href="./unpublished.html" class="text-dark d-block">Dərc olunmamış</a></li>
 					<li class="position-relative w-100"><a href="" class="text-dark d-block">Deaktiv olunmuş</a></li>
-					<li class="position-relative w-100"><a href="" class="text-dark d-block">Sifarişlər</a></li>
+					<li class="position-relative w-100"><a href="./orders-profile.html" class="text-dark d-block">Sifarişlər</a></li>
 				</ul>
 			</div>
 			<div class="my-4 col-md-9 col-xs-12">
