--- a/purchase-advertisement.html
+++ b/purchase-advertisement.html
@@ -173,9 +173,9 @@
 					<li class="position-relative w-100"><a href="./published.html" class="text-dark d-block">Dərc olunmuş</a></li>
 					<li class="position-relative w-100"><a href="./checking.html" class="text-dark d-block">Yoxlanılır</a></li>
 					<li class="position-relative w-100"><a href="./payment.html" class="text-dark d-block">Ödəniş et</a></li>
-					<li class="position-relative w-100"><a href="" class="text-dark d-block">Dərc olunmamış</a></li>
+					<li class="position-relative w-100"><a href="./unpublished.html" class="text-dark d-block">Dərc olunmamış</a></li>
 					<li class="position-relative w-100"><a href="" class="text-dark d-block">Deaktiv olunmuş</a></li>
-					<li class="position-relative w-100"><a href="" class="text-dark d-block">Sifarişlər</a></li>
+					<li class="position-relative w-100"><a href="./orders-profile.html" class="text-dark d-block">Sifarişlər</a></li>
 				</ul>
 			</div>
 
@@ -298,7 +298,7 @@
 
 
 
-				<div class="card my-5 ">
+				<div class="card card-animate my-5 ">
 					<div class="card-body">
 						<blockquote class="blockquote ">
 							<span class="text-purple font-weight-bold"><i class="fas fa-info mr-2"></i>Nəzərə
