--- a/sales-advertisement.html
+++ b/sales-advertisement.html
@@ -173,9 +173,9 @@
 							olunmuş</a></li>
 					<li class="position-relative w-100"><a href="./checking.html" class="text-dark d-block">Yoxlanılır</a></li>
 					<li class="position-relative w-100"><a href="./payment.html" class="text-dark d-block">Ödəniş et</a></li>
-					<li class="position-relative w-100"><a href="" class="text-dark d-block">Dərc olunmamış</a></li>
+					<li class="position-relative w-100"><a href="./unpublished.html" class="text-dark d-block">Dərc olunmamış</a></li>
 					<li class="position-relative w-100"><a href="" class="text-dark d-block">Deaktiv olunmuş</a></li>
-					<li class="position-relative w-100"><a href="" class="text-dark d-block">Sifarişlər</a></li>
+					<li class="position-relative w-100"><a href="./orders-profile.html" class="text-dark d-block">Sifarişlər</a></li>
 				</ul>
 			</div>
 
@@ -201,7 +201,7 @@
 							</form>
 						</div>
 						<div class="col-3">
-							<button type="submit" class="btn btn-outline-secondary rounded">Yüklə</button>
+							<button type="submit" class="btn  btn-outline-success rounded">Yüklə</button>
 						</div>
 					</div>
 					<div class="row mt-4 d-flex justify-content-between">
@@ -265,7 +265,7 @@
 						style="border: 1px solid #d2acee; width: 150px;">Redakte et</button>
 				</form>
 
-				<div class="card my-5 ">
+				<div class="card card-animate my-5 ">
 					<div class="card-body">
 						<blockquote class="blockquote ">
 							<span class="text-purple font-weight-bold"><i class="fas fa-info mr-2"></i>Nəzərə
