--- a/order.html
+++ b/order.html
@@ -617,7 +617,7 @@
 			</div>
 		</div>
 
-		<div class="card shadow  mb-3">
+		<div class="card card-animate shadow  mb-3">
 			<div class="card-body">
 				<h5 class="card-title">Nəzərə alın:</h5>
 				<p class="card-text">Elan verən şəxs sizin sifarişinizi gec görə bilər, bu səbəbdən elan verən şəxsin
