--- a/payment.html
+++ b/payment.html
@@ -174,10 +174,10 @@
 							olunmuş</a></li>
 					<li class="position-relative w-100"><a href="./checking.html"
 							class="text-dark d-block">Yoxlanılır</a></li>
-					<li class="position-relative w-100"><a href="" class="text-dark d-block">Ödəniş et</a></li>
-					<li class="position-relative w-100"><a href="" class="text-dark d-block">Dərc olunmamış</a></li>
+					<li class="position-relative w-100"><a href="./payment.html" class="text-dark d-block">Ödəniş et</a></li>
+					<li class="position-relative w-100"><a href="./unpublished.html" class="text-dark d-block">Dərc olunmamış</a></li>
 					<li class="position-relative w-100"><a href="" class="text-dark d-block">Deaktiv olunmuş</a></li>
-					<li class="position-relative w-100"><a href="" class="text-dark d-block">Sifarişlər</a></li>
+					<li class="position-relative w-100"><a href="./orders-profile.html" class="text-dark d-block">Sifarişlər</a></li>
 				</ul>
 			</div>
 			<div class="my-4 col-md-9 col-xs-12">
@@ -201,7 +201,7 @@
 							</select>
 						</div>
 						<div class="col-md-2 my-3"><input type="number" class="form-control" placeholder="100 AZN"></div>
-						<div class="col-xs-12 d-block my-3">
+						<div class="col-xs-12 d-block my-3 mx-3">
 							<button type="submit" class="btn bg-purple text-white  shadow-sm rounded "
 								style="border: 1px solid #d2acee; width: 150px;">Göndər</button>
 						</div>
